--- a/_posts/2020-09-05-intro.md
+++ b/_posts/2020-09-05-intro.md
@@ -28,9 +28,9 @@ Developing
 ## 4. Dependencies
 
 * [libfuse](https://github.com/libfuse/libfuse) (version 3.9.4 or newer)
-    * [Python](https://python.org/) (version 3.5 or newer)
-    * [Ninja](https://ninja-build.org/) (version 1.7 or newer)
-    * [gcc](https://www.gnu.org/software/gcc/) (version 7.5.0 or newer)
+  * [Python](https://python.org/) (version 3.5 or newer)
+  * [Ninja](https://ninja-build.org/) (version 1.7 or newer)
+  * [gcc](https://www.gnu.org/software/gcc/) (version 7.5.0 or newer)
 * [libfastcommon](https://github.com/happyfish100/libfastcommon) (version commit-c2d8faa)
 * [libserverframe](https://github.com/happyfish100/libserverframe) (version commit-02adaac)
 * [fastDIR](https://github.com/happyfish100/fastDIR) (version commit-62cab21)
@@ -41,7 +41,7 @@ Developing
 
 版本号：version 1.43
 
-```
+```shell script
 git clone https://github.com/happyfish100/libfastcommon.git
 cd libfastcommon/
 git checkout master
@@ -49,7 +49,8 @@ git checkout master
 ```
 
 默认安装目录：
-```
+
+```shell script
 /usr/lib64
 /usr/lib
 /usr/include/fastcommon
@@ -57,7 +58,7 @@ git checkout master
 
 ### 5.2. libserverframe
 
-```
+```shell script
 git clone https://github.com/happyfish100/libserverframe.git
 ./make.sh
 ./make.sh install
@@ -65,7 +66,7 @@ git clone https://github.com/happyfish100/libserverframe.git
 
 ### 5.3. fastDIR
 
-```
+```shell script
 git clone https://github.com/happyfish100/fastDIR.git
 ./make.sh
 ./make.sh install
@@ -73,21 +74,21 @@ git clone https://github.com/happyfish100/fastDIR.git
 
 编译警告信息：
 
-```
+```shell script
 perl: warning: Setting locale failed.
 perl: warning: Please check that your locale settings:
-	LANGUAGE = (unset),
-	LC_ALL = (unset),
-	LC_CTYPE = "UTF-8",
-	LANG = "en_US.UTF-8"
-    are supported and installed on your system.
+LANGUAGE = (unset),
+LC_ALL = (unset),
+LC_CTYPE = "UTF-8",
+LANG = "en_US.UTF-8"
+are supported and installed on your system.
 perl: warning: Falling back to the standard locale ("C").
 ```
 
 可以修改/etc/profile，增加export LC_ALL=C解决上这个警告（记得刷新当前session：. /etc/profile）
 头文件安装成功，其他目录创建失败。
 
-```
+```shell script
 git clone https://github.com/happyfish100/faststore.git
 cd faststore/
 ./make.sh
@@ -105,13 +106,13 @@ FastCFS's configuration comprise multiple subfiles, one entry file and others us
 
 FastCFS has the following config files:
 
-* cluster.conf - 
+* cluster.conf
 * server.conf
 * servers.conf
 * storage.conf
 * client.conf - Use with client，need to reference cluster.conf
 
-### 6.1. Configure server.conf 
+### 6.1. Configure server.conf
 
 ### 6.2. cluster.conf configure
 
@@ -135,4 +136,4 @@ FastCFS is Open Source software released under the GNU General Public License V3
 
 ## 致谢
 
-- 感谢[Fastcfs](https://fastcfs.github.io)团队提供分布式存储
+* 感谢[Fastcfs](https://fastcfs.github.io)团队提供分布式存储
