1. add interface intro 2. add faststore intro

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
 2020-09-05
 https://www.wowthemes.net/mundana-jekyll-theme/
 https://github.com/wowthemesnet/mundana-theme-jekyll
+
+2020-12-25
+1. add fastcfs intro
+
+2020-12-28
+1. add interface intro
+2. add faststore intro
